--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,14 @@ dependencies:
   pin_code_text_field: ^1.8.0
   flutter_pin_code_fields: ^1.1.0
   dio: ^3.0.10
-  provider: ^5.0.0
+  provider: ^6.0.0
   get: ^4.3.8
   fluttertoast: ^8.0.8
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.18
   expandable: ^5.0.1
+  html_unescape: ^2.0.0
+  flutter_html: ^2.2.1
 
 
 dev_dependencies:
